--- a/trab1/index.html
+++ b/trab1/index.html
@@ -95,23 +95,24 @@
         <br>
         <fieldset>
             <legend>formulário</legend>
-
-            <label for="email">Email:</label>
-            <input type="email" id="email">
-            <br>
-            <label for="password">Senha:</label>
-            <input type="password" id="password">
-            <br>
-            <label for="data">Data:</label>
-            <input type="date" id="data">
-            <br>
-            <label for="color">Cor:</label>
-            <input type="color" id="color">
-            <br>
-            <label for="telefone">Telefone:</label>
-            <input type="tel" id="telefone">
-            <br>
-            <input type="submit" value="enviar">
+            <form>
+                <label for="email">Email:</label>
+                <input type="email" id="email">
+                <br>
+                <label for="password">Senha:</label>
+                <input type="password" id="password">
+                <br>
+                <label for="data">Data:</label>
+                <input type="date" id="data">
+                <br>
+                <label for="color">Cor:</label>
+                <input type="color" id="color">
+                <br>
+                <label for="telefone">Telefone:</label>
+                <input type="tel" id="telefone">
+                <br>
+                <input type="submit" value="enviar">
+            </form>
         </fieldset>
         <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Ejkb_YpuHWs?si=9Ilv9HRN7zHHOMKF" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
