--- a/trab2/index.html
+++ b/trab2/index.html
@@ -17,7 +17,11 @@
                     <img src="imgs/search.png" alt="search icon" id="search-icon">
                 </div>
             </div>
-            <li><a href="#about-us" id="about-usl">Sobre nós</a></li>
+            <ul>
+                <li>
+                    <a href="#about-us" id="about-usl">Sobre nós</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <main>
