--- a/trab2/index.html
+++ b/trab2/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav id="head-container">
-            <img src="imgs/logo2.png" alt="logo.png" id="logo">
+            <a href="#section-1"><img src="imgs/logo2.png" alt="logo.png" id="logo"></a>
             <div id="search-box">
                 <div id="search-bar">
                     <input type="text" placeholder="Pesquisar">
@@ -19,7 +19,8 @@
             </div>
             <ul>
                 <li>
-                    <a href="#about-us" id="about-usl">Sobre nós</a>
+                    <a href="#about-us" class="nav-button">Sobre nós</a>
+                    <a href="#reviews" class="nav-button">Reviews</a>
                 </li>
             </ul>
         </nav>
