--- a/trab2/index.html
+++ b/trab2/index.html
@@ -65,7 +65,7 @@
             <div class="container">
                 <div class="cube">
                     <img src="imgs/cubo_05.webp" alt="cubo pyraminx">
-                    <p class="cube-n">Megaminx Profissional Gam</p>
+                    <p class="cube-n">Megaminx Profissional</p>
                     <p class="cube-po">R$ 459,99</p>
                     <button>Comprar</button>
                 </div>
