--- a/trab3/index.html
+++ b/trab3/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/estilo.css" >
+    <link defer rel="stylesheet" type="text/css" href="css/estilo.css" >
     <title>Cubo Mania</title>
 </head>
 <body>
@@ -33,28 +33,28 @@
             <h2>Promoções</h2>
             <div class="container">
                 <div class="cube">
-                    <img loading="lazy" src="imgs/cubo_01.webp" alt="cubo 3x3">
+                    <img width="100%"; height="70%";loading="lazy" src="imgs/cubo_01.webp" alt="cubo 3x3">
                     <p class="cube-n">Cubo Mágico 3x3 Profissio...</p>
                     <p class="cube-p">R$ 29,99</p>
                     <p class="cube-po">R$ 19,99</p>
                     <button>Comprar</button>
                 </div>
                 <div class="cube">
-                    <img loading="lazy" src="imgs/cubo_02.webp" alt="cubo 2x2">
+                    <img width="100%"; height="70%";loading="lazy" src="imgs/cubo_02.webp" alt="cubo 2x2">
                     <p class="cube-n">Cubo Mágico 2x2 Profissio...</p>
                     <p class="cube-p">R$ 119,99</p>
                     <p class="cube-po">R$ 99,99</p>
                     <button>Comprar</button>
                 </div>
                 <div class="cube">
-                    <img loading="lazy" src="imgs/cubo_03.webp" alt="cubo 4x4">
+                    <img width="100%"; height="70%";loading="lazy" src="imgs/cubo_03.webp" alt="cubo 4x4">
                     <p class="cube-n">Cubo mágico 4x4 Profissio...</p>
                     <p class="cube-p">R$ 189,99</p>
                     <p class="cube-po">R$ 139,99</p>
                     <button>Comprar</button>
                 </div>
                 <div class="cube">
-                    <img loading="lazy" src="imgs/cubo_04.webp" alt="cubo pyraminx">
+                    <img width="100%"; height="70%";loading="lazy" src="imgs/cubo_04.webp" alt="cubo pyraminx">
                     <p class="cube-n">Cubo mágico Pyraminx ...</p>
                     <p class="cube-p">R$ 59,99</p>
                     <p class="cube-po">R$ 39,99</p>
@@ -64,25 +64,25 @@
             <h2 id="highlights">Destaques</h2>
             <div class="container">
                 <div class="cube">
-                    <img loading="lazy" src="imgs/cubo_05.webp" alt="cubo pyraminx">
+                    <img width="100%"; height="70%";loading="lazy" src="imgs/cubo_05.webp" alt="cubo pyraminx">
                     <p class="cube-n">Megaminx Profissional</p>
                     <p class="cube-po">R$ 459,99</p>
                     <button>Comprar</button>
                 </div>
                 <div class="cube">
-                    <img loading="lazy" src="imgs/cubo_06.webp" alt="cubo pyraminx">
+                    <img width="100%"; height="70%";loading="lazy" src="imgs/cubo_06.webp" alt="cubo pyraminx">
                     <p class="cube-n">Cubo 13x13x13 Profissional</p>
                     <p class="cube-po">R$ 1399,90</p>
                     <button>Comprar</button>
                 </div>
                 <div class="cube">
-                    <img loading="lazy" src="imgs/cubo_07.webp" alt="cubo pyraminx">
+                    <img width="100%"; height="70%";loading="lazy" src="imgs/cubo_07.webp" alt="cubo pyraminx">
                     <p class="cube-n">Cubo 5x5x5 ball core</p>
                     <p class="cube-po">R$ 439,90</p>
                     <button>Comprar</button>
                 </div>
                 <div class="cube">
-                    <img loading="lazy" src="imgs/cubo_08.webp" alt="cubo pyraminx">
+                    <img width="100%"; height="70%";loading="lazy" src="imgs/cubo_08.webp" alt="cubo pyraminx">
                     <p class="cube-n">Cubo gan 14 maglev galaxy</p>
                     <p class="cube-po">R$ 39,99</p>
                     <button>Comprar</button>
