--- a/trab3/index.html
+++ b/trab3/index.html
@@ -16,8 +16,8 @@
             <a href="#section-1"><img loading="lazy" src="imgs/logo2.webp" alt="logo.webp" id="logo"></a>
             <div id="search-box">
                 <div id="search-bar">
-                    <label for="site-search" class="hidden">Buscar no site</label>
-                    <input type="text" id="site-search" placeholder="Pesquisar">
+                    <label for="site-search" id="search-text">Pesquisar:</label>
+                    <input type="text" id="site-search">
                     <img loading="lazy" src="imgs/search.webp" alt="search icon" id="search-icon">
                 </div>
             </div>
@@ -132,9 +132,9 @@
         <section id="section-2">
             <img 
             loading="lazy" 
-            srcset="imgs/espinossauro-300w.webp 300w, imgs/espinossauro-400w.webp 400w, imgs/espinossauro-1167w.webp 1167w" 
-            sizes="(max-width: 300px) 300px, (max-width: 400px) 400px, 1167px" 
-            src="imgs/espinossauro-1167w.webp" 
+            srcset="imgs/espinossauro-300w.webp 300w, imgs/espinossauro-400w.webp 400w, imgs/espinossauro-500w.webp 500w" 
+            sizes="(max-width: 463px) 300px, (max-width: 700px) 400px, 500px" 
+            src="imgs/espinossauro-500w.webp" 
             alt="Imagem de um espinossauro">
             <fieldset>
                 <legend>Criar conta/fazer login</legend>
