--- a/trab3/index.html
+++ b/trab3/index.html
@@ -189,13 +189,13 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
                     <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="imgs/cubo_01.webp"  width="300px" height="300px" class="d-block w-100" alt="Cubo 1">
+                        <img src="imgs/cubo_01.webp"  width="300" height="300" class="d-block w-100" alt="Cubo 1">
                     </div>
                     <div class="carousel-item">
-                        <img src="imgs/cubo_02.webp"  width="300px" height="300px" class="d-block w-100" alt="Cubo 2">
+                        <img src="imgs/cubo_02.webp"  width="300" height="300" class="d-block w-100" alt="Cubo 2">
                     </div>
                     <div class="carousel-item">
-                        <img src="imgs/cubo_03.webp" width="300px" height="300px" class="d-block w-100" alt="Cubo 3">
+                        <img src="imgs/cubo_03.webp" width="300" height="300" class="d-block w-100" alt="Cubo 3">
                     </div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
             </div>
           </section>
           <section id="section-6">
-                <div style="height: 400px;">
+                <div style="height: 400;">
                     <div id="transition"></div>
                 </div>
                 <div id="animation">
@@ -276,5 +276,5 @@
 
     animation-timeline: view
 
-    
+
 -->
