--- a/trab3/index.html
+++ b/trab3/index.html
@@ -27,7 +27,7 @@
         </div>
 
       <!-- Botão hambúrguer para mobile -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
