--- a/trab3/index.html
+++ b/trab3/index.html
@@ -241,7 +241,7 @@
             </div>
           </section>
           <section id="section-6">
-                <div style="height: 400;">
+                <div style="height: 400px;">
                     <div id="transition"></div>
                 </div>
                 <div id="animation">
