--- a/trab3/index.html
+++ b/trab3/index.html
@@ -8,7 +8,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/estilo.css" >
-    <title>Cubo Mania</title>
+    
+    <!-- Primary Meta Tags -->
+        <title>Cubo Mania</title>
+        <meta name="title" content="Cubo Mania" />
+        <meta name="description" content="Loja especializada em cubos mágicos e acessórios para speedcubing. Encontre modelos para todos os níveis, de iniciantes a campeões, com os melhores preços e entrega rápida." />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://rafael-almeidar.github.io/Front-End/trab3/index.html" />
+        <meta property="og:title" content="Cubo Mania" />
+        <meta property="og:description" content="Loja especializada em cubos mágicos e acessórios para speedcubing. Encontre modelos para todos os níveis, de iniciantes a campeões, com os melhores preços e entrega rápida." />
+        <meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+        <!-- X (Twitter) -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:url" content="https://rafael-almeidar.github.io/Front-End/trab3/index.html" />
+        <meta property="twitter:title" content="Cubo Mania" />
+        <meta property="twitter:description" content="Loja especializada em cubos mágicos e acessórios para speedcubing. Encontre modelos para todos os níveis, de iniciantes a campeões, com os melhores preços e entrega rápida." />
+        <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+        <!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
     <header>
