--- a/trab3/index.html
+++ b/trab3/index.html
@@ -19,14 +19,14 @@
         <meta property="og:url" content="https://rafael-almeidar.github.io/Front-End/trab3/index.html" />
         <meta property="og:title" content="Cubo Mania" />
         <meta property="og:description" content="Loja especializada em cubos mágicos e acessórios para speedcubing. Encontre modelos para todos os níveis, de iniciantes a campeões, com os melhores preços e entrega rápida." />
-        <meta property="og:image" content="https://github.com/Rafael-AlmeidaR/Front-End/tree/main/trab3/imgs/logo.webp" />
+        <meta property="og:image" content="https://raw.githubusercontent.com/Rafael-AlmeidaR/Front-End/refs/heads/main/trab3/imgs/logo.webp" />
 
         <!-- X (Twitter) -->
         <meta property="twitter:card" content="summary_large_image" />
         <meta property="twitter:url" content="https://rafael-almeidar.github.io/Front-End/trab3/index.html" />
         <meta property="twitter:title" content="Cubo Mania" />
         <meta property="twitter:description" content="Loja especializada em cubos mágicos e acessórios para speedcubing. Encontre modelos para todos os níveis, de iniciantes a campeões, com os melhores preços e entrega rápida." />
-        <meta property="twitter:image" content="https://github.com/Rafael-AlmeidaR/Front-End/tree/main/trab3/imgs/logo.webp" />
+        <meta property="twitter:image" content="https://raw.githubusercontent.com/Rafael-AlmeidaR/Front-End/refs/heads/main/trab3/imgs/logo.webp" />
 
         <!-- Meta Tags Generated with https://metatags.io -->
 </head>
