--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Projetos</h1>
     <a href="trab1/index.html">Trabalho 1</a>
+    <a href="trab2/index.html">Trabalho 2</a>
+    <a href="trab3/index.html">Trabalho 3</a>    
+    <a href="trab4/index.html">Trabalho 4</a>
 </body>
 </html>
