correções e correções e correções

--- a/trab4/index.html
+++ b/trab4/index.html
@@ -66,7 +66,7 @@
         <div style="margin-right: 5%;">
             <p>Professores: Tiago Lopes Telecken e Nicolle Ruppenthal</p>
             <p>Matérias: Front-End e Química</p>
-            <p>Referências:</p>
+            <h3>Referências:</h3>
             <ul>
                 <li><a href="https://brasilescola.uol.com.br/quimica/silicio.htm#Resumo+sobre+o+sil%C3%ADcio" target="_blank">Brasil Escola</a></li>
                 <li><a href="https://avanziquimica.com.br/blog/blog-p/cuidados-produtos-quimicos/tudo-sobre-o-dioxido-de-silicio-silica-aplicacoes-uso-seguro-e-cuidados?utm_source=chatgpt.com" target="_blank">AvanzQuimica</a></li>
