--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
     <a href="trab2/index.html">Trabalho 2</a>
     <a href="trab3/index.html">Trabalho 3</a>    
     <a href="trab4/index.html">Trabalho 4</a>
+    <a href="trab5/index.html">Trabalho 5</a>
+    <a href="trab6/index.html">Trabalho 6</a>
 </body>
 </html>
