--- a/trab6/index.html
+++ b/trab6/index.html
@@ -14,6 +14,7 @@
         </nav>
     </header>
     <main>
+        <p>Clique para gerar uma raposa aleatória e desbloquear o acesso a outra página</p>
         <button onclick="randomFox()">gerar!</button>
         <div id="fox"></div>
     </main>
